--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           You
           <br>
           <hr>
-          Score: <span class="you">0</span>
+          Scores: <span class="you">0</span>
         </h2>
         <h2>
           Computer
